--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -5,7 +5,7 @@
 		<sidebar-component></sidebar-component>
 	</div>
 	<div class="col-lg-10 panel  panel-default" style="margin-bottom: 1px;">
-		2
+		<router-outlet></router-outlet>
 	</div>
 
 
