--- a/client/styles.css
+++ b/client/styles.css
@@ -1,12 +1,13 @@
 * {
 	direction: rtl;
+  font-family: Vazir;
 }
 @font-face {
   font-family: Vazir;
-  src: url('app/fonts/Vazir.eot');
-  src: url('app/fonts/Vazir.eot?#iefix') format('embedded-opentype'),
-       url('app/fonts/Vazir.woff') format('woff'),
-       url('app/fonts/Vazir.ttf') format('truetype');
+  src: url('./app/assets/fonts/Vazir.eot') format('embedded-opentype');
+  src: url('./app/assets/fonts/Vazir.eot?#iefix') format('embedded-opentype'),
+       url('./app/assets/fonts/Vazir.woff') format('woff'),
+       url('./app/assets/fonts/Vazir.ttf') format('truetype');
   font-weight: normal;
 }
 h1 {
@@ -14,3 +15,5 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+
