--- a/client/app/header/header.component.html
+++ b/client/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" style="margin-bottom: 1px;">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="">
         <img alt="Brand" src="favicon.ico">
       </a>
     </div>
