--- a/client/styles.css
+++ b/client/styles.css
@@ -6,8 +6,8 @@
   font-family: Vazir;
   src: url('./app/assets/fonts/Vazir.eot') format('embedded-opentype');
   src: url('./app/assets/fonts/Vazir.eot?#iefix') format('embedded-opentype'),
-       url('./app/assets/fonts/Vazir.woff') format('woff'),
-       url('./app/assets/fonts/Vazir.ttf') format('truetype');
+  url('./app/assets/fonts/Vazir.woff') format('woff'),
+  url('./app/assets/fonts/Vazir.ttf') format('truetype');
   font-weight: normal;
 }
 h1 {
@@ -15,5 +15,22 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+.loading {
 
+  background: none repeat scroll 0 0 black;
+  position: fixed;
+  display: block;
+  opacity: 0.2;
+  z-index: 1000001; // or, higher
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
 
+.spinner {
+  margin-top:20%;
+  position: fixed;
+  z-index: 1000002;
+  color:white;
+}
