--- a/client/src/app/sidebar/sidebar.component.html
+++ b/client/src/app/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-folder-close">&nbsp;</span>بیماران</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-folder-close">&nbsp;</span>هزينه ها</a>
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse in">
@@ -29,7 +29,7 @@
         <table class="table">
           <tr>
             <td>
-              <span class="glyphicon glyphicon-pencil text-primary"></span>&nbsp;<a routerLink="/header">ثبت پرونده جدید</a>
+              <span class="glyphicon glyphicon-pencil text-primary"></span>&nbsp;<a routerLink="/expense">ثبت هزينه جدید</a>
             </td>
           </tr>
         </table>
