--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -7,6 +7,10 @@
   font-weight: normal;
 }
 
+* {
+  font-family: Vazir !important;
+}
+
 .loading {
   width: 100%;
   background: none repeat scroll 0 0 black;
@@ -28,6 +32,3 @@
   color:white;
 }
 
-body div table{
-  font-family: Vazir !important;
-}
