--- a/client/src/app/expense/expense.component.html
+++ b/client/src/app/expense/expense.component.html
@@ -75,22 +75,22 @@
     <label class="col-md-4 control-label" for="وضعیت تاهل">نوع هزينه</label>
     <div class="col-md-8">
       <label class="radio-inline" for="رادیوتراپی">
-        <input type="radio" name="cost_type" id="رادیوتراپی" value="1" 
+        <input type="radio" name="cost_type" id="رادیوتراپی" value="رادیوتراپی" 
         [(ngModel)]="expense.cost_type">
         رادیوتراپی
       </label>
       <label class="radio-inline" for="شیمی درمانی">
-        <input type="radio" name="cost_type" id="شیمی درمانی" value="2"
+        <input type="radio" name="cost_type" id="شیمی درمانی" value="شیمی درمانی"
         [(ngModel)]="expense.cost_type">
         شیمی درمانی
       </label>
        <label class="radio-inline" for="دارو">
-        <input type="radio" name="cost_type" id="دارو" value="3"
+        <input type="radio" name="cost_type" id="دارو" value="دارو"
         [(ngModel)]="expense.cost_type">
         دارو
       </label>
        <label class="radio-inline" for="متفرقه">
-        <input type="radio" name="cost_type" id="متفرقه" value="4"
+        <input type="radio" name="cost_type" id="متفرقه" value="متفرقه"
         [(ngModel)]="expense.cost_type">
         متفرقه
       </label>
