--- a/client/src/app/sidebar/sidebar.component.html
+++ b/client/src/app/sidebar/sidebar.component.html
@@ -37,4 +37,23 @@
     </div>
   </div>
 
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-folder-close">&nbsp;</span>گزارش هزينه ها</a>
+      </h4>
+    </div>
+    <div id="collapseTwo" class="panel-collapse collapse in">
+      <div class="panel-body">
+        <table class="table">
+          <tr>
+            <td>
+              <span class="glyphicon glyphicon-pencil text-primary"></span>&nbsp;<a routerLink="/report">گزارش ماهانه</a>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+
 </div>
