--- a/client/src/app/expense/expense.component.html
+++ b/client/src/app/expense/expense.component.html
@@ -1,109 +1,186 @@
 <app-spinner [visible]="loading"></app-spinner>
-<form class="form-horizontal" (ngSubmit)="saveExpense($event);expenseForm.reset();"  #expenseForm="ngForm">
-  <fieldset>
 
-    <!-- Form Name -->
-    <legend>ثبت هزينه</legend>
-
-    
-
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="شماره پرونده بيمار">شماره پرونده بيمار</label>
-      <div class="col-md-4">
-        <input id="شماره پرونده بيمار" name="patient_id" type="number" placeholder="شماره پرونده بيمار" class="form-control input-md" required
-        [(ngModel)]="expense.patient_id">
-
+<div class="panel panel-default panel-table">
+  <div class="panel-heading">
+    <div class="row">
+      <div class="col-md-2">
+        <button type="button" class="btn btn-sm btn-primary btn-create" data-toggle="modal" data-target=".bs-example-modal-lg">ایجاد هزینه جدید</button>
       </div>
-    </div>
-
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="شماره نامه">شماره نامه</label>
-      <div class="col-md-4">
-        <input id="شماره نامه" name="letter_number" type="number" placeholder="شماره نامه" class="form-control input-md" required
-        [(ngModel)]="expense.letter_number">
-
+      <div class="col-md-8 text-center"><h3 class="panel-title">لیست هزینه ها</h3></div>
+      <div class="col-md-2">
+        <input type="text" class="form-control col-md-9 input-sm" [(ngModel)]="searchTerm" name="searchTerm" (keyup)="search()"><i class="glyphicon glyphicon-search"></i>
       </div>
-    </div>
-
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="هزينه واقعي">هزينه واقعي</label>
-      <div class="col-md-4">
-        <input id="هزينه واقعي" name="actual_cost" type="number" placeholder="هزينه واقعي" class="form-control input-md" required
-        [(ngModel)]="expense.actual_cost">
-
-      </div>
-    </div>
-
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="هزينه كمك شده">هزينه كمك شده</label>
-      <div class="col-md-4">
-        <input id="هزينه كمك شده" name="donation" type="number" placeholder="هزينه كمك شده" class="form-control input-md"
-        [(ngModel)]="expense.donation">
-
-      </div>
-    </div>
-
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="تاريخ">تاريخ</label>
-      <div class="col-md-4">
-        <input id="تاريخ" name="date" type="text" placeholder="YYYY/MM/DD" class="form-control input-md" required
-        [(ngModel)]="expense.date" pattern="\d{4}/\d{2}/\d{2}">
-
-      </div>
-    </div>
-
-    <!-- Select Basic -->
-   <!--  <div class="form-group">
-      <label class="col-md-4 control-label" for="نوع هزينه">نوع هزينه</label>
-      <div class="col-md-4">
-        <select id="نوع هزينه" name="cost_type" class="form-control" required
-        [(ngModel)]="expense.cost_type">
-        <option value="رادیوتراپی">رادیوتراپی</option>
-        <option value="شیمی درمانی">شیمی درمانی</option>
-        <option value="دارو">دارو</option>
-        <option value="متفرقه">متفرقه</option>
-      </select>
-    </div>
-  </div> -->
-
-  <div class="form-group">
-    <label class="col-md-4 control-label" for="وضعیت تاهل">نوع هزينه</label>
-    <div class="col-md-8">
-      <label class="radio-inline" for="رادیوتراپی">
-        <input type="radio" name="cost_type" id="رادیوتراپی" value="رادیوتراپی" 
-        [(ngModel)]="expense.cost_type">
-        رادیوتراپی
-      </label>
-      <label class="radio-inline" for="شیمی درمانی">
-        <input type="radio" name="cost_type" id="شیمی درمانی" value="شیمی درمانی"
-        [(ngModel)]="expense.cost_type">
-        شیمی درمانی
-      </label>
-       <label class="radio-inline" for="دارو">
-        <input type="radio" name="cost_type" id="دارو" value="دارو"
-        [(ngModel)]="expense.cost_type">
-        دارو
-      </label>
-       <label class="radio-inline" for="متفرقه">
-        <input type="radio" name="cost_type" id="متفرقه" value="متفرقه"
-        [(ngModel)]="expense.cost_type">
-        متفرقه
-      </label>
     </div>
   </div>
+  <div class="panel-body text-center">
+    <table class="table table-striped table-bordered table-list table-hover text-center">
+      <thead>
+      <tr>
+        <th class="hidden-xs">ردیف</th>
+        <th>شماره پرونده</th>
+        <th>شماره نامه</th>
+        <th>هزینه واقعی</th>
+        <th>تاریخ</th>
+        <th><em class="glyphicon glyphicon-cog"></em></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let cost of expenses">
 
-</fieldset>
-<!-- Button (Double) -->
-<div class="form-group">
-  <div class="row">
-    <button type="submit" id="ثبت" name="ثبت" class="btn btn-success">ثبت</button>
-    <button type="reset" id="پاك كردن" name="پاك كردن" class="btn btn-warning">پاك كردن</button>
+        <td class="hidden-xs">{{cost.id}}</td>
+
+        <td>{{cost.patient_id}}</td>
+        <td>{{cost.letter_number}}</td>
+        <td>{{cost.actual_cost}}</td>
+        <td>{{cost.date}}</td>
+        <td align="center">
+          <a class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" (click)="getExpense(cost.id)"><em class="glyphicon glyphicon-pencil"></em></a>
+          <a class="btn btn-danger" (click)="deleteExpense(cost.id)"><em class="glyphicon glyphicon-trash"></em></a>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+
+  </div>
+  <div class="panel-footer">
+    <div class="row">
+      <div class="col col-xs-4">Page 1 of 5
+      </div>
+      <div class="col col-xs-8">
+        <ul class="pagination hidden-xs pull-right">
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+        </ul>
+        <ul class="pagination visible-xs pull-right">
+          <li><a href="#">«</a></li>
+          <li><a href="#">»</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
-</form>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">{{modal_title}}</h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal" (ngSubmit)="saveExpense(expense.id,$event);expenseForm.reset();"  #expenseForm="ngForm">
+          <fieldset>
+
+            <!-- Form Name -->
+            <legend>ثبت هزينه</legend>
+
+
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="شماره پرونده بيمار">شماره پرونده بيمار</label>
+              <div class="col-md-4">
+                <input id="شماره پرونده بيمار" name="patient_id" type="number" placeholder="شماره پرونده بيمار" class="form-control input-md" required
+                       [(ngModel)]="expense.patient_id">
+
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="شماره نامه">شماره نامه</label>
+              <div class="col-md-4">
+                <input id="شماره نامه" name="letter_number" type="number" placeholder="شماره نامه" class="form-control input-md" required
+                       [(ngModel)]="expense.letter_number">
+
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="هزينه واقعي">هزينه واقعي</label>
+              <div class="col-md-4">
+                <input id="هزينه واقعي" name="actual_cost" type="number" placeholder="هزينه واقعي" class="form-control input-md" required
+                       [(ngModel)]="expense.actual_cost">
+
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="هزينه كمك شده">هزينه كمك شده</label>
+              <div class="col-md-4">
+                <input id="هزينه كمك شده" name="donation" type="number" placeholder="هزينه كمك شده" class="form-control input-md"
+                       [(ngModel)]="expense.donation">
+
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="تاريخ">تاريخ</label>
+              <div class="col-md-4">
+                <input id="تاريخ" name="date" type="text" placeholder="YYYY/MM/DD" class="form-control input-md" required
+                       [(ngModel)]="expense.date" pattern="\d{4}/\d{2}/\d{2}">
+
+              </div>
+            </div>
+
+            <!-- Select Basic -->
+            <!--  <div class="form-group">
+               <label class="col-md-4 control-label" for="نوع هزينه">نوع هزينه</label>
+               <div class="col-md-4">
+                 <select id="نوع هزينه" name="cost_type" class="form-control" required
+                 [(ngModel)]="expense.cost_type">
+                 <option value="رادیوتراپی">رادیوتراپی</option>
+                 <option value="شیمی درمانی">شیمی درمانی</option>
+                 <option value="دارو">دارو</option>
+                 <option value="متفرقه">متفرقه</option>
+               </select>
+             </div>
+           </div> -->
+
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="وضعیت تاهل">نوع هزينه</label>
+              <div class="col-md-8">
+                <label class="radio-inline" for="رادیوتراپی">
+                  <input type="radio" name="cost_type" id="رادیوتراپی" value="رادیوتراپی"
+                         [(ngModel)]="expense.cost_type">
+                  رادیوتراپی
+                </label>
+                <label class="radio-inline" for="شیمی درمانی">
+                  <input type="radio" name="cost_type" id="شیمی درمانی" value="شیمی درمانی"
+                         [(ngModel)]="expense.cost_type">
+                  شیمی درمانی
+                </label>
+                <label class="radio-inline" for="دارو">
+                  <input type="radio" name="cost_type" id="دارو" value="دارو"
+                         [(ngModel)]="expense.cost_type">
+                  دارو
+                </label>
+                <label class="radio-inline" for="متفرقه">
+                  <input type="radio" name="cost_type" id="متفرقه" value="متفرقه"
+                         [(ngModel)]="expense.cost_type">
+                  متفرقه
+                </label>
+              </div>
+            </div>
+
+          </fieldset>
+          <!-- Button (Double) -->
+          <div class="form-group">
+            <div class="row">
+              <button type="submit" id="ثبت" name="ثبت" class="btn btn-success">ثبت</button>
+              <button type="reset" id="پاك كردن" name="پاك كردن" class="btn btn-warning">پاك كردن</button>
+            </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
