--- a/client/src/app/sidebar/sidebar.component.html
+++ b/client/src/app/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
         <table class="table">
           <tr>
             <td>
-              <span class="glyphicon glyphicon-pencil text-primary"></span>&nbsp;<a routerLink="/expense">ثبت هزينه جدید</a>
+              <span class="glyphicon glyphicon-pencil text-primary"></span>&nbsp;<a routerLink="/expense">هزینه ها</a>
             </td>
           </tr>
         </table>
