--- a/client/src/app/report/report.component.html
+++ b/client/src/app/report/report.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
-	<div class="col-md-6 col-md-offset-3">
-		<form (ngSubmit)="repo($event);repoForm.reset();"  #repoForm="ngForm">
+	<div class="row"><br>
+		<form (ngSubmit)="repo($event);repoForm.reset();"  #repoForm="ngForm" *ngIf="!expenses">
 			<div class="row form-group">
 			<label class="col-md-4 control-label" for="تاريخ">از تاريخ</label>
 			<div class="col-md-4">
@@ -24,6 +24,66 @@
 		</div>
 		</form>
 
-		<div >{{errorMessage}}</div>
-	</div>
+    <div class="panel panel-default panel-table" *ngIf="expenses">
+      <div class="panel-heading">
+        <div class="row">
+
+          <div><h3 class="panel-title">گزارش هزینه ها</h3></div>
+
+        </div>
+      </div>
+      <div class="panel-body text-center">
+        <table class="table table-striped table-bordered table-list table-hover text-center">
+          <thead>
+          <tr>
+            <th class="hidden-xs">ردیف</th>
+            <th>شماره پرونده</th>
+            <th>شماره نامه</th>
+            <th>هزینه واقعی</th>
+            <th>تاریخ</th>
+
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let cost of expenses">
+
+            <td class="hidden-xs">{{cost.id}}</td>
+
+            <td>{{cost.patient_id}}</td>
+            <td>{{cost.letter_number}}</td>
+            <td>{{cost.actual_cost}}</td>
+            <td>{{cost.date}}</td>
+
+          </tr>
+          <tr>
+            <td>مجموع</td>
+            <td colspan="4">{{sum}} ریال</td>
+          </tr>
+          </tbody>
+        </table>
+
+      </div>
+      <div class="panel-footer">
+        <div class="row">
+          <div class="col col-xs-4">Page 1 of 5
+          </div>
+          <div class="col col-xs-8">
+            <ul class="pagination hidden-xs pull-right">
+              <li><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+            </ul>
+            <ul class="pagination visible-xs pull-right">
+              <li><a href="#">«</a></li>
+              <li><a href="#">»</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
 </div>
