--- a/client/src/app/report/report.component.html
+++ b/client/src/app/report/report.component.html
@@ -1,3 +1,4 @@
+<app-spinner [visible]="loading"></app-spinner>
 <div class="form-group">
 	<div class="row"><br>
 		<form (ngSubmit)="repo($event);repoForm.reset();"  #repoForm="ngForm" *ngIf="!expenses">
