--- a/client/src/app/sidebar/sidebar.component.html
+++ b/client/src/app/sidebar/sidebar.component.html
@@ -40,10 +40,10 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-folder-close">&nbsp;</span>گزارش هزينه ها</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-folder-close">&nbsp;</span>گزارش هزينه ها</a>
       </h4>
     </div>
-    <div id="collapseTwo" class="panel-collapse collapse in">
+    <div id="collapseThree" class="panel-collapse collapse in">
       <div class="panel-body">
         <table class="table">
           <tr>
