--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1,14 +1,12 @@
 @font-face {
-  font-family: Vazir;
-  src:  url('../fonts/Vazir.eot');
-  src:  url('../fonts/Vazir.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Vazir.woff') format('woff'),
-        url('../fonts/Vazir.ttf') format('truetype');
+  font-family: IRANSans-web;
+  font-style: normal;
   font-weight: normal;
-}
-
-div {
-  font-family: Vazir !important;
+  src: url('../fonts/iransans/IRANSansWeb.eot');
+  src: url('../fonts/iransans/IRANSansWeb.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/iransans/IRANSansWeb.woff2') format('woff2'),
+  url('../fonts/iransans/IRANSansWeb.woff') format('woff'),
+  url('../fonts/iransans/IRANSansWeb.ttf') format('truetype');
 }
 
 .loading {
@@ -32,3 +30,6 @@ div {
   color:white;
 }
 
+body,div,table {
+  font-family: IRANSans-web !important;
+}
